@@ -52,6 +52,7 @@ dpkg (1.16.2) UNRELEASED; urgency=low
     Reported by Daniel Ruoso <daniel@ruoso.com>. Closes: #655411
   * Fix start-stop-daemon --exec and --name options on FreeBSD, NetBSD and
     OpenBSD by swapping the process matching implementations.
+  * Fix start-stop-daemon --name option on GNU/Hurd to match the process name.
 
   [ Raphaël Hertzog ]
   * Update Dpkg::Shlibs to look into multiarch paths when cross-building
